--- a/instance-app/views/membership/view.html
+++ b/instance-app/views/membership/view.html
@@ -15,14 +15,14 @@
     <section class="person">
       <p>
         Person:
-        <a href="<%- membership.person_id.slug_url %>"><%- membership.person_id.name %></a>
+        <a href="<%- membership.person_id.url %>"><%- membership.person_id.name %></a>
       </p>
     </section>
 
     <section class="organization">
       <p>
         Organization:
-        <a href="<%- membership.organization_id.slug_url %>"><%- membership.organization_id.name %></a>
+        <a href="<%- membership.organization_id.url %>"><%- membership.organization_id.name %></a>
       </p>
     </section>
 
