--- a/instance-app/views/person/index.html
+++ b/instance-app/views/person/index.html
@@ -19,7 +19,7 @@
   <ul>
     <% _.each( people, function(person) { %>
       <li>
-        <a href="<%- person.slug_url %>"><%- person.name %></a>
+        <a href="<%- person.url %>"><%- person.name %></a>
       </li>
     <% }); %>
   </ul>
