--- a/instance-app/views/search.html
+++ b/instance-app/views/search.html
@@ -14,7 +14,7 @@
   <ul>
     <% _.each( results, function (result) { %>
       <li>
-        <a href="/persons/<%- result.slug %>"><%- result.name %></a>
+        <a href="<%- result.url %>"><%- result.name %></a>
       </li>
     <% }); %>
   </ul>
