--- a/instance-app/views/organization/index.html
+++ b/instance-app/views/organization/index.html
@@ -20,7 +20,7 @@
   <ul>
     <% _.each( organizations, function (organization) { %>
       <li>
-        <a href="<%- organization.slug_url %>"><%- organization.name %></a>
+        <a href="<%- organization.url %>"><%- organization.name %></a>
       </li>                                                
     <% }); %>
   </ul>
