Fix grammar in organization template
I've also updated the comment in the template as it took me a moment to
figure out what a 'bb view' was.

--- a/instance-app/views/organization/new.html
+++ b/instance-app/views/organization/new.html
@@ -1,9 +1,9 @@
 <div id="new-organization">
-  <h1>Add a organization</h1>
+  <h1>Add an organization</h1>
   
   <form name="create-new-organization">
 
-    <% // more content inserted in the bb view %>
+    <% // more content inserted in the Backbone view %>
 
     <h2>Suggestions</h2>
 
