Change suggestions list to use id
Sadly we can't use the model's 'url' function in this view because it's
also rendered clientside by Backbone, which doesn't (yet) have that
method on the models.

--- a/instance-app/views/suggestions/compact_list.html
+++ b/instance-app/views/suggestions/compact_list.html
@@ -1,7 +1,7 @@
 <% if (items.length) { %>
   <% _.each( items, function ( item ) { %>
     <li>
-      <a href="/<%- url_type %>/<%- item.slug %>"><%- item.name %> (<%- item.slug %>)</a>
+      <a href="/<%- url_type %>/<%- item.id %>"><%- item.name %> (<%- item.id %>)</a>
     </li>
   <% }); %>
 <% } else { %>
